--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@nestjs/swagger": "^7.3.1",
     "@tanstack/react-query": "^5.29.2",
     "axios": "^1.6.8",
     "localforage": "^1.10.0",
